2014-11-10  Richard Sandiford  <richard.sandiford@arm.com>

	* config/frv/frv.c (frv_registers_conflict_p_1): Take an rtx rather
	than an rtx *.  Take the regstate_t directly rather than via a void *.
	Return a bool rather than an int.  Iterate over all subrtxes here.
	(frv_registers_conflict_p): Update accordingly.

2014-11-10  Richard Sandiford  <richard.sandiford@arm.com>

	* config/frv/frv.c: Include rtl-iter.h.
	(frv_acc_group_1): Delete.
	(frv_acc_group): Use FOR_EACH_SUBRTX.

2014-11-10  Richard Sandiford  <richard.sandiford@arm.com>

	* config/frv/frv.c: Move include of rtl.h after hard-reg-set.h.
	(frv_clear_registers_used): Delete.
	(frv_ifcvt_modify_tests): Use find_all_hard_regs.

2014-11-10  Jan Hubicka  <hubicka@ucw.cz>

	PR bootstrap/63573
	* calls.c (initialize_argument_information): When emitting thunk call
	use original memory placement of the argument.

2014-11-10  Renlin Li  <renlin.li@arm.com>

	PR middle-end/61529
	* tree-ssa-threadupdate.c (compute_path_counts): Bound path_in_freq.

2014-11-10  Thomas Preud'homme  <thomas.preudhomme@arm.com>

	* expmed.c (expand_shift_1): Expand 8 bit rotate of 16 bit value to
	bswaphi if available.

2014-11-10  Bernd Schmidt  <bernds@codesourcery.com>

	* config/nvptx/nvptx.c: New file.
	* config/nvptx/nvptx.h: New file.
	* config/nvptx/nvptx-protos.h: New file.
	* config/nvptx/nvptx.md: New file.
	* config/nvptx/t-nvptx: New file.
	* config/nvptx/nvptx.opt: New file.
	* common/config/nvptx/nvptx-common.c: New file.
	* config.gcc: Handle nvptx-*-*.

2014-11-10  Richard Biener  <rguenther@suse.de>

	* tree-ssa-operands.c (finalize_ssa_uses): Properly put
	released operands on the free list.

2014-11-10  Richard Biener  <rguenther@suse.de>

	* match.pd: Implement pattern from simplify_mult.
	* tree-ssa-forwprop.c (simplify_mult): Remove.
	(pass_forwprop::execute): Do not call simplify_mult.

2014-11-10  Richard Biener  <rguenther@suse.de>

	PR tree-optimization/63800